finally fixed layout issues in Contact Summary CRM-4606
git-svn-id: http://svn.civicrm.org/civicrm/branches/trunk.usability@22345 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1591,7 +1591,7 @@ DIV.buttons #icons {
 	PADDING-BOTTOM: 5px !important; PADDING-LEFT: 5px !important; PADDING-RIGHT: 5px !important; PADDING-TOP: 5px !important
 }
 
-.separator {
+#crm-container .separator {
 	border-bottom: solid 2px #ccc;
 }
 
